# flake8-name-migrations

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_flake8_name_migrations.py
